deploy/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: accounts
  labels:
    app: accounts
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: accounts
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
